external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/missing_match_struct@ide.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/ide_mode/missing_match_struct.move:7:16
  │
7 │         match (s) {
  │                ^ Pattern '_' not covered

note[I15004]: IDE missing match arms
  ┌─ tests/move_2024/ide_mode/missing_match_struct.move:7:19
  │  
7 │           match (s) {
  │ ╭───────────────────^
8 │ │         }
  │ ╰─────────^ Missing arms: '0x42::m::S { x , y }'

error[E04016]: too few arguments
   ┌─ tests/move_2024/ide_mode/missing_match_struct.move:13:13
   │
13 │             S { } => 0
   │             ^^^^^ Missing pattern for field 'x' in '0x42::m::S'

error[E04016]: too few arguments
   ┌─ tests/move_2024/ide_mode/missing_match_struct.move:13:13
   │
13 │             S { } => 0
   │             ^^^^^ Missing pattern for field 'y' in '0x42::m::S'
